# serializer version: 1
# name: test_lock_entities[lock.back_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.back_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'unifi_access',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LockEntityFeature: 1>,
    'translation_key': None,
    'unique_id': 'door-002-lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_lock_entities[lock.back_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Back Door',
      'supported_features': <LockEntityFeature: 1>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.back_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unlocked',
  })
# ---
# name: test_lock_entities[lock.front_door-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.front_door',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'unifi_access',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LockEntityFeature: 1>,
    'translation_key': None,
    'unique_id': 'door-001-lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_lock_entities[lock.front_door-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Front Door',
      'supported_features': <LockEntityFeature: 1>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.front_door',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'locked',
  })
# ---
